--- a/config-stwitter.properties
+++ b/config-stwitter.properties
@@ -17,3 +17,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Uncomment this if you want the schema.sql script to run
+# against your MySQL Schema
+spring.datasource.initialization-mode=always
