--- a/config-stwitter.properties
+++ b/config-stwitter.properties
@@ -1,4 +1,4 @@
-# this is the port on which our tasker-service will run
+# this is the port on which our stwitter-service will run
 server.port=9999
 
 # allow for RefreshScope
