--- a/config-stwitter.properties
+++ b/config-stwitter.properties
@@ -21,3 +21,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Uncomment this if you want the schema.sql script to run
 # against your MySQL Schema
 spring.datasource.initialization-mode=always
+
+#this might be all wrong though
